<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="211dp"
    tools:context=".AccountActivities.UpdateDataActivity"
    tools:layout_editor_absoluteY="81dp">


    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="31dp"
        android:layout_marginStart="31dp"
        android:ems="15"
        android:hint="Nome"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/surnameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/surnameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="31dp"
        android:layout_marginStart="31dp"
        android:ems="15"
        android:hint="Sobrenome"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/phoneEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <com.vicmikhailau.maskededittext.MaskedEditText
        android:id="@+id/phoneEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="31dp"
        android:layout_marginStart="31dp"
        android:ems="15"
        android:hint="Telefone"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/cepEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surnameEditText"
        app:mask="(##)#####-####" />

    <com.vicmikhailau.maskededittext.MaskedEditText
        android:id="@+id/cepEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="31dp"
        android:layout_marginStart="31dp"
        android:hint="Cep"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/stateEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditText"
        app:mask="#####-###" />

    <EditText
        android:id="@+id/stateEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="31dp"
        android:layout_marginStart="31dp"
        android:hint="Estado"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/cityEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cepEditText" />

    <EditText
        android:id="@+id/cityEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="31dp"
        android:layout_marginStart="31dp"
        android:hint="Cidade"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/districtEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stateEditText" />

    <EditText
        android:id="@+id/districtEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="31dp"
        android:layout_marginStart="31dp"
        android:hint="Bairro"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/addressEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityEditText" />

    <EditText
        android:id="@+id/addressEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="31dp"
        android:layout_marginStart="31dp"
        android:hint="Endereço"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/numberEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/districtEditText" />

    <EditText
        android:id="@+id/numberEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="31dp"
        android:layout_marginStart="31dp"
        android:hint="Número"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/complementEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressEditText" />

    <EditText
        android:id="@+id/complementEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="31dp"
        android:layout_marginStart="31dp"
        android:hint="Complemento (Opcional)"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/finishUpdateData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberEditText" />

    <Button
        android:id="@+id/finishUpdateData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:onClick="finishUpdateData"
        android:text="Alterar Dados"
        android:textColor="@android:color/background_light"
        android:theme="@style/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/complementEditText" />

</android.support.constraint.ConstraintLayout>