<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_logoutAluno"
        android:orderInCategory="100"
        android:title="@string/action_logoutAluno"
        app:showAsAction="never" />
    <item android:id="@+id/menuPesquisa"
        android:title="Pesquisar"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_action_search"
        />

</menu>
