...
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logoutProfessor">Sair</string>
    <string name="title_activity_menu_aluno">FindClass</string>
    <string name="action_logoutAluno">Sair</string>
    <string name="TOAST_STRING">Campos em branco não são permitidos.</string>
    <string name="WEAK_PASSWORD_TOAST">Senha fraca, senhas precisam de no mínimo 6 caracteres.</string>
    <string name="INVALID_EMAIL_TOAST">E-mail inválido.</string>
    <string name="TOAST_STRING_EMAIL_NAO_CADASTRADO">E-mail não cadastrado, realize cadastro</string>
    <string name="title_activity_subject_category_medio">Professores</string>
    <string name="title_activity_subject_category_variados">Professores</string>
    <string name="title_activity_availability_list_aluno">Disponibilidade</string>
...
